# blog

./: .sesskey  CNAME  README.md  build_static.py  dos.html  hey-bob.html  hugo.toml  index.html  main.py  one.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  hugo.yaml
content/: about.md  apps.md  contact.md
content/posts/: about_creativity.md  creatividad.md  example.md  hey-bob.md  product-mindset.md  product_mindset.md  test.md
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/about/: index.html
docs/apps/: index.html
docs/assets/: combined.min.c43235edceff31044f3132ea67f3c9fd8174f7efd33cb35db7c4b75fc3db8912.css
docs/posts/: index.html  index.xml
docs/posts/hey-bob/: index.html
docs/posts/product-mindset/: index.html
docs/tags/: index.html  index.xml
docs/tags/notas/: index.xml
docs/tags/package/: index.html  index.xml
docs/tags/productos/: index.html  index.xml
docs/tags/python/: index.html  index.xml
docs/tags/tutorial/: index.html  index.xml
posts/: dos.md  hey-bob.md  one.md
public/: 404.html  index.html  index.xml  sitemap.xml
public/about/: index.html
public/about-hugo/: index.html
public/apps/: index.html
public/categories/: index.html  index.xml
public/categories/syntax/: index.html  index.xml
public/categories/themes/: index.html  index.xml
public/contact/: index.html
public/page/1/: index.html
public/posts/: index.html  index.xml
public/posts/creatividad/: index.html
public/series/: index.html  index.xml
public/tags/: index.html  index.xml
public/tags/css/: index.html  (+1 more)
(+17 files in other folders)
